* Packaged Solr respects the `data_path` configuration setting from `sunspot.yml` (djmaze)
* Packaged Solr correctly uses the `pid_dir` configuration option from `sunspot.yml` (Russen Guggemos)
* Specs run correctly in 1.9.2 (Larry Sprock)
* Documentation improvements (Thibaut Barrère, gjb83, Breno Santos Salgado)

== 1.2.1 2010-12-28
* Decreased default reindexing batch size from 500 to 50

== 1.2.0 2010-12-28
* Replace solr-spatial-light with client-side geohash-based spatial search
* Override Solr field naming conventions using :as option
* Delegate #id method directly to calling context inside DSL
* Create a SilentFailSessionProxy that rescues exceptions on write operations.
* Inclusion by identity
* Solr optimize command
* Ignore negative :limit option for query facets
* Eliminated value sorting for range scopes
* Correctly cast stored boolean values if they are booleans
* Correctly cast and return stored values for multi-valued fields

== 1.1.0 2010-04-01
* MoreLikeThis support
* Allow multiple fulltext queries in one search
* Function queries
* Update solr-spatial-light to 0.0.6 build
* Support for :prefix when faceting.
* Allow specification of solr jar
* Updated reindex task to allow setting of batch size and list of models to index
* Use a '*:*' query for deleting the entire index
* Ability to specify custom request handler for queries
* Gracefully handle nonexistent search result

== 1.0.4 2010-03-19
* Update solr-spatial-light to 0.0.5
  * Fix NullPointerException in repeated geo search
  * Fix missing distances in repeated geo search
* Don't query the data store more than once when results are missing

== 1.0.2 2010-03-11
* Restore Hit#distance for result geo distance
* Remove :distance special sort
* Quote reserved keywords in boolean queries
* Add Search#facets accessor to retrieve all facets

== 1.0.1 2010-03-05
* Copy all needed config files when sunspot-installer run with force option

== 1.0.0 2010-03-03
* Multiselect Field Faceting